--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,9 @@ pico_sdk_init()
 add_executable(auto_mouse)
 
 target_sources(auto_mouse PUBLIC
-        ${CMAKE_CURRENT_LIST_DIR}/main.c
-        ${CMAKE_CURRENT_LIST_DIR}/usb_descriptors.c
-        )
+    ${CMAKE_CURRENT_LIST_DIR}/main.c
+    ${CMAKE_CURRENT_LIST_DIR}/usb_descriptors.c
+)
 
 # Make sure TinyUSB can find tusb_config.h
 target_include_directories(auto_mouse PUBLIC
@@ -20,6 +20,11 @@ target_include_directories(auto_mouse PUBLIC
 
 # In addition to pico_stdlib required for common PicoSDK functionality, add dependency on tinyusb_device
 # for TinyUSB device support and tinyusb_board for the additional board support library used by the example
-target_link_libraries(auto_mouse PUBLIC pico_stdlib tinyusb_device tinyusb_board)
+target_link_libraries(auto_mouse PUBLIC
+    pico_stdlib
+    pico_rand
+    tinyusb_device
+    tinyusb_board
+)
 
 pico_add_extra_outputs(auto_mouse)
